Added: Implimented a rudimentary crosshair color changer. Changed: Todo file See changelog for more information

--- a/TODO
+++ b/TODO
@@ -1,27 +1,64 @@
-Todo:
+	Constructions Todo
+	Copyright (c) 2009 Matthew D. Jordan
+
+---
+Structure:
 
 -look at OL behavior when layer 1 is active, a layer 2 object is selected, and then cst is run.  Does this set layer 1 as OL, or layer 2?  Perhaps this would be a desirable thing.  It would make selecting the OL much easier (at the cost of confusing people even more?).
 
-change commands to use ` key?
-	I don't think it's assigned to anything by default.  Good use of pinky, rolling towards the spacebar.
-	
-	construct - `
-	destruct - ``e
-		note: double `, or a confirmation dialogue to prevent unanticipated deletions?  perhaps a visual indicator of what will be deleted?  or just stick to the the mighty undo?
+-make crosshair change color when in constructions layer
+	--perhaps a nice gaudy magenta?
 
-make crosshair change color when in constructions layer - perhaps a nice magenta
+-make color user settable?
 
-better documentation
+-use cst_state flag & change c:cst & c:dst to conditional logic
+	--makes it easier to set crosshair color
+	--(= cst_state (or 0 nil)) -> cst layer does not exist
+	--(= cst_state 1) -> cst layer is created, active
+	--(= cst_state 2) -> cst layer is created, not active
 
-copy to constructions command: `c
-move to constructions command: `v or `m or ``c
 
-copy from constructions command? (& move from)
-	I'm on the fence about this.  would it encourage sloppy use?  Ideally they should just toggle over to OL and create the object there.
-		then again, it would increase flexibility.   Probably need more testing time with this before deciding.
+---
+Commands:
 
-isolate constructions command: `s?
+-change commands to use ` key?
+	--I don't think it's assigned to anything by default.
+	--Good use of pinky, rolling towards the spacebar.
+	--construct - `
+	--destruct - ``e
+		---note: double `, or a confirmation dialogue to prevent unanticipated deletions?  perhaps a visual indicator of what will be deleted?  or just stick to the the mighty undo?
 
-toggle constructions layer on/off: `t? `h? `f?
+-copy to constructions command: `c
+-move to constructions command: `v or `m or ``c
 
-toggle constructions printing property?: low low priority.
+-copy from constructions command? (& move from)
+	--I'm on the fence about this.  would it encourage sloppy use?  
+	--Ideally they should just toggle over to OL and create the object there.
+	--then again, it would increase flexibility.
+	--Probably need more real use testing before deciding.
+
+-isolate constructions command: `s?
+
+-toggle constructions layer on/off: `t? `h? `f?
+
+-toggle constructions printing property?: low low priority.
+
+-Destroy constructions
+	--give a reminder/visual indication of what you're deleting
+	--(maybe this stuff isn't such a good idea, prolly just cruft)
+		---toggle layerisolate mode to Off
+		---isolate the constructions layer
+		---save zoom state
+		---zoom to extents
+		---ask user for easy confirmation (N to stop or similar)
+		---if yes -> select all objects, erase
+		---if no -> don't
+		---zoom back to saved state
+		---unisolate the constructions layer
+		---toggle layerisolate mode to Fade
+
+
+---
+Documentation:
+
+-Make documentation suitable for end users
