--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,13 @@
 	Copyright (c) 2009 Matthew D. Jordan
 
 
+---
+v0.2.32
+
+Changed: Todo file, restructured, added
+Added: a function to change the crosshair color.  Right now it only changes to a certain color.
+Added: plans for a cst_state flag.
+
 
 ---
 v0.2.12
