--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,15 @@
 	Copyright (c) 2009 Matthew D. Jordan
 
 
+v0.4.94
+---
+
+Dynamic color switching has arrived!
+Colors behave as expected when opening/creating documents with an active colored cursor
+If Autocad is exited with a colored cursor active, the script returns it to the default color on next launch.
+
+
+
 v0.4.0
 ---
 
