--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,12 @@
 	Copyright (c) 2009 Matthew D. Jordan
 
 
+v0.4.112
+---
+
+Colors are super better now.  Crosshair color preferences will no longer break (unless  autocad crashes, and even then, probably not)
+
+
 v0.4.94
 ---
 
