--- a/TODO
+++ b/TODO
@@ -6,44 +6,5 @@
 Bugs:
 	dst (laydel) pops up text window when deleting blocks or dimensions.  Rewrite using cst_clean & purge command
 	cannot purge after dimensions have been created on that layer.!!!!
-	
 
----
-Structure:
-
--change crosshair color back to dynamic, not hardcoded
--make crosshair color a decision tree
-
-
----
-Commands:
-
-TODO: modify cst - turn layer on if off
-
-
--copy from constructions command? (& move from)
-	--I'm on the fence about this.  would it encourage sloppy use?  
-	--Ideally they should just toggle over to OL and create the object there.
-	--then again, it would increase flexibility.
-	--Probably need more real use testing before deciding.
-
--Destroy constructions
-	--give a reminder/visual indication of what you're deleting?????
-	--(maybe this stuff isn't such a good idea, prolly just cruft)
-		---toggle layerisolate mode to Off
-		---isolate the constructions layer
-		---save zoom state
-		---zoom to extents
-		---ask user for easy confirmation (N to stop or similar)
-		---if yes -> select all objects, erase
-		---if no -> don't
-		---zoom back to saved state
-		---unisolate the constructions layer
-		---toggle layerisolate mode to Fade
-
-
----
-Documentation:
-
--Make documentation suitable for end users
--Make a system plan for coders.
+Implement a crosshair reset function.
